tests/ui/rust-2018/async-ident.stderr
error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:7:4
   |
LL | fn async() {}
   |    ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>
note: the lint level is defined here
  --> $DIR/async-ident.rs:2:9
   |
LL | #![deny(keyword_idents)]
   |         ^^^^^^^^^^^^^^
   = note: `#[deny(keyword_idents_2018)]` implied by `#[deny(keyword_idents)]`

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:12:19
   |
LL |     ($async:expr, async) => {};
   |                   ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:17:6
   |
LL | foo!(async);
   |      ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:26:11
   |
LL |     trait async {}
   |           ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:30:10
   |
LL |     impl async for MyStruct {}
   |          ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:36:12
   |
LL |     static async: u32 = 0;
   |            ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:42:11
   |
LL |     const async: u32 = 0;
   |           ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:48:15
   |
LL | impl Foo { fn async() {} }
   |               ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:53:12
   |
LL |     struct async {}
   |            ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:56:9
   |
LL |     let async: async = async {};
   |         ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:56:16
   |
LL |     let async: async = async {};
   |                ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:56:24
   |
LL |     let async: async = async {};
   |                        ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:67:19
   |
LL |     () => (pub fn async() {})
   |                   ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: `async` is a keyword in the 2018 edition
  --> $DIR/async-ident.rs:74:6
   |
LL |     (async) => (1)
   |      ^^^^^ help: you can use a raw identifier to stay compatible: `r#async`
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2018!
   = note: for more information, see issue #49716 <https://github.com/rust-lang/rust/issues/49716>

error: aborting due to 14 previous errors

